# Krate

./: Cargo.toml  README.md
src/: cli.rs  config.rs  downloader.rs  http.rs  main.rs  models.rs
src/commands/: get.rs  mod.rs  server.rs  update.rs
src/providers/: curseforge.rs  mod.rs  modrinth.rs
src/tui/: mod.rs
